igt@gem_exec_balancer@bonded-slice - Failed assertion: __gem_execbuf(fd, execbuf) == 0, error: -16 != 0
Starting subtest: bonded-slice
(gem_exec_balancer:1442) ioctl_wrappers-CRITICAL: Test assertion failure function gem_execbuf, file ../lib/ioctl_wrappers.c:608:
(gem_exec_balancer:1442) ioctl_wrappers-CRITICAL: Failed assertion: __gem_execbuf(fd, execbuf) == 0
(gem_exec_balancer:1442) ioctl_wrappers-CRITICAL: error: -16 != 0
Subtest bonded-slice failed.
**** DEBUG ****
(gem_exec_balancer:1442) DEBUG: Test requirement passed: gem_scheduler_has_semaphores(i915)
(gem_exec_balancer:1442) igt_dummyload-DEBUG: Test requirement passed: nengine
(gem_exec_balancer:1442) ioctl_wrappers-CRITICAL: Test assertion failure function gem_execbuf, file ../lib/ioctl_wrappers.c:608:
(gem_exec_balancer:1442) ioctl_wrappers-CRITICAL: Failed assertion: __gem_execbuf(fd, execbuf) == 0
(gem_exec_balancer:1442) ioctl_wrappers-CRITICAL: error: -16 != 0
(gem_exec_balancer:1442) igt_core-INFO: Stack trace:
(gem_exec_balancer:1442) igt_core-INFO: #0 ../lib/igt_core.c:1877 __igt_fail_assert()
(gem_exec_balancer:1442) igt_core-INFO: #1 [gem_execbuf+0x44]
(gem_exec_balancer:1442) igt_core-INFO: #2 ../tests/i915/gem_exec_balancer.c:842 __real_main1803()
(gem_exec_balancer:1442) igt_core-INFO: #3 ../tests/i915/gem_exec_balancer.c:1803 main()
(gem_exec_balancer:1442) igt_core-INFO: #4 ../csu/libc-start.c:344 __libc_start_main()
(gem_exec_balancer:1442) igt_core-INFO: #5 [_start+0x2a]
**** END ****
Subtest bonded-slice: FAIL (3.585s)
gem_exec_balancer: ../lib/igt_core.c:1933: igt_exit: Assertion `!num_test_children' failed.
Received signal SIGABRT.
Stack trace:
#0 [fatal_sig_handler+0xd6]
#1 [killpg+0x40]
#2 [gsignal+0xc7]
#3 [abort+0x141]
#4 [uselocale+0x33a]
#5 [__assert_fail+0x42]
#6 [igt_exit+0x133]
#7 [main+0x2c]
#8 [__libc_start_main+0xe7]
#9 [_start+0x2a]
````